--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,14 @@
-<p>homepage works!</p>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+
+
+            <div class="col-4"><p>homepage works!</p></div>
+            <div class="col-4"><p>homepage works!</p></div>
+            <div class="col-4"><p>homepage works!</p></div>
+        </div>
+    </div>
+</div>
+
+
+
